# EX_AI-mcp-server

./: .dockerignore  .env.example  .env.simplified.example  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Git_and_GitHub_Guide.md  LIMITATIONS.md  Procfile  README-ORIGINAL.md  README-PUBLIC.md  README.md  SECURITY.md  SUPPORT.md  __2025-09-21T22-07-17.md  __2025-09-24T00-01-28.md  auggie-config.json  config.py  mcp-config.augmentcode.json  mcp-config.json  mcp-config.pylauncher.json  nginx.conf  pyproject.toml  pytest.ini  remote_server.py  requirements.txt  run-server.ps1  run-server.sh  server.py
.logs/: metrics.jsonl  toolcalls.jsonl
.tmp/: ctx.txt
.validation_tmp/: sample_a.txt  sample_b.txt
Daemon/: mcp-config.auggie.json  mcp-config.augmentcode.json  mcp-config.claude.json
assessments/: ALL_TOOLS_ASSESSMENT.md
audit/: audit_logger.py  file_audit_logger.py
auggie/: .auggie_sessions.json  __init__.py  compare.py  config.py  model_discovery.py  perf.py  selector.py  session.py  templates.py  wrappers.py
context/: context_manager.py
docker/: Dockerfile.remote  README.md
docs/: ARCHITECTURE_MAP.md  DOCUMENTATION_INDEX.md  Git_and_GitHub_Guide.md  MCP_OUTPUT_FIX_SUMMARY.md  agentic_upgrade_execution_log.md  auggie_cli_handover.md  flags.md  index.md
dr/: recovery_plan.py
monitoring/: autoscale.py  file_sink.py  health_monitor.py  health_monitor_factory.py  predictive.py  slo.py  telemetry.py  worker_pool.py
nl/: command_processor.py
patch/: patch_crossplatform.py
providers/: README.md  __init__.py  balancer.py  base.py  glm.py  hybrid_platform_manager.py  kimi.py  openai_compatible.py  registry.py  registry_srcshim.py  zhipu_optional.py
routing/: task_router.py
scripts/: README.md  activate_base.ps1  activate_moonshot.ps1  activate_zhipuai.ps1  alias_test.py  assess_all_tools.py  check_no_legacy_imports.py  cleanup_phase3.ps1  cleanup_phase3.py  clone_from_zen.ps1  code_quality_checks.ps1  code_quality_checks.sh  coverage.ps1  coverage.sh  demo_tools.py  diagnose_mcp.py  exai_agentic_audit.py  exai_diagnose.py  exai_end_to_end.ps1  mcp_e2e_auggie_smoketest.py  mcp_e2e_kimi.py  mcp_e2e_kimi_tools.py  mcp_e2e_paid_validation.py  mcp_e2e_smoketest.py  mcp_server_wrapper.py  mcp_tool_sweep.py  migrate_config.py  progress_test.py  router_service_diagnostics_smoke.py  run_integration_tests.ps1  run_integration_tests.sh  run_kimi_glm_audit_v4.py  run_thinkdeep_web.py  run_ws_daemon.py  run_ws_shim.py  run_ws_shim_COMPLETE.py  setup-pre-commit.sh  setup_venvs.ps1  show_progress_json.py  smoke_deferred_test.py  (+20 more)
security/: rbac.py  rbac_config.py
simulator_tests/: base_test.py  conversation_base_test.py  test_thinking_routing.py
ss_examples/: .env.kimi-glm.example  AUGGIE_SETUP_FINAL.md  CODE_OF_CONDUCT.md  auggie-config.example.json  claude_desktop_config.min.json
streaming/: streaming_adapter.py
systemprompts/: analyze_prompt.py  chat_prompt.py  thinkdeep_prompt.py
tests/: conftest.py  test_activity_flags.py  test_advanced_context_manager.py  test_advanced_context_manager_mvp.py  test_agentic_scaffolding.py  test_alias_target_restrictions.py  test_audit_logger.py  test_auggie_auto.py  test_auggie_compare.py  test_auggie_config.py  test_auggie_perf.py  test_auggie_selector.py  test_auggie_session.py  test_auggie_templates.py  test_auggie_wrappers.py  test_autoscale.py  (+62 more)
(+849 files in other folders)
